# Alpha-Ladder

./: .gitignore  LICENSE  README.md  bridge_search.py  experimental_strategy.py  particle_harmonics.py  phi_capital.py  phi_coincidence_scan.py  pyproject.toml  requirements.txt  rung_spacing_search.py  test_alpha_ladder.py
alpha_ladder_core/: __init__.py  alpha_units.py  anomaly_cancellation.py  bridge_search.py  bridge_search_v2.py  bridge_significance.py  c2_derivation.py  casimir_stabilization.py  chameleon_screening.py  charged_matter_loops.py  constants.py  corrected_bridge.py  cosmological_constant.py  dark_sector.py  dilaton.py  dimension_uniqueness.py  experimental.py  feynman_diagram.py  fifth_force_predictions.py  flux_stabilization.py  gauge_alpha_running.py  gauge_braneworld_s2.py  gauge_coupling_splitting.py  gauge_escape_routes.py  gauge_kk_gauge_matching.py  gauge_kk_spectrum_matched.py  gauge_lhc_kk_comparison.py  gauge_m6_parameter_space.py  gauge_mu_vev_relation.py  gauge_phi_vev_golden_ratio.py  gauge_two_brane_physics.py  hierarchy_derivation.py  kk_explicit_reduction.py  kk_reduction.py  ladder.py  literature_comparison.py  moduli_stabilization.py  mu_structure.py  mu_tension.py  one_alpha_derivation.py  (+21 more)
app/: Home.py
legacy/: alpha_ladder.py  dilaton_check.py  predict_G.py
tests/: test_alpha_units.py  test_anomaly_cancellation.py  test_bridge.py  test_bridge_search_v2.py  test_bridge_significance.py  test_c2_derivation.py  test_casimir_stabilization.py  test_chameleon_screening.py  test_charged_matter_loops.py  test_constants.py  test_dilaton.py  (+52 more)
(+53 files in other folders)
